[gd_scene load_steps=7 format=3 uid="uid://bap2x3m6vfl0b"]

[ext_resource type="Script" uid="uid://dgtn6m5c2krxl" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://chl60127ty4fn" path="res://menu.tscn" id="1_ig7tw"]
[ext_resource type="Texture2D" uid="uid://cg3eorpt16s1k" path="res://art/background.png" id="2_lquwl"]
[ext_resource type="PackedScene" uid="uid://bwvv3b4fsy85s" path="res://collageScreen.tscn" id="4_1bvp3"]
[ext_resource type="PackedScene" uid="uid://ba40thlsfxq1e" path="res://pause_menu.tscn" id="5_lquwl"]

[sub_resource type="LabelSettings" id="LabelSettings_lquwl"]
font_size = 26
font_color = Color(0, 0, 0, 1)

[node name="main" type="Node2D"]
script = ExtResource("1_0xm2m")

[node name="background" type="ColorRect" parent="."]
z_index = -1
offset_left = -831.0
offset_top = -486.0
offset_right = 1873.0
offset_bottom = 1291.0
mouse_filter = 2
color = Color(0.494118, 0.866667, 0.803922, 1)

[node name="TextureRect" type="TextureRect" parent="background"]
layout_mode = 0
offset_left = 589.0
offset_top = 284.0
offset_right = 4589.0
offset_bottom = 2933.0
scale = Vector2(0.4, 0.4)
mouse_filter = 2
texture = ExtResource("2_lquwl")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)
zoom = Vector2(0.65, 0.65)

[node name="Menu" parent="." instance=ExtResource("1_ig7tw")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 569.0
offset_top = 316.0
offset_right = 569.0
offset_bottom = 316.0

[node name="collageScreen" parent="." instance=ExtResource("4_1bvp3")]
position = Vector2(299, 11)

[node name="PauseMenu" parent="." instance=ExtResource("5_lquwl")]
visible = false
offset_left = 340.0
offset_top = -8.0
offset_right = 800.0
offset_bottom = 660.0

[node name="DeathCounter" type="Label" parent="."]
visible = false
offset_left = 34.0
offset_top = 21.0
offset_right = 152.0
offset_bottom = 57.0
text = "Mortes: 0"
label_settings = SubResource("LabelSettings_lquwl")

[connection signal="start_game" from="Menu" to="." method="_on_menu_start_game"]
[connection signal="resume_game" from="PauseMenu" to="." method="_on_pause_menu_resume_game"]
[connection signal="retry_level" from="PauseMenu" to="." method="_on_pause_menu_retry_level"]
[connection signal="return_to_menu" from="PauseMenu" to="." method="_on_pause_menu_return_to_menu"]
